<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/movie_menu">

    <fragment
        android:id="@+id/movie_menu"
        android:name="com.ayra.moviecatalogue.ui.view.fragment.MovieFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/tv_menu"
        android:name="com.ayra.moviecatalogue.ui.view.fragment.TvShowFragment"
        android:label="@string/series"
        tools:layout="@layout/fragment_tv_show" />

    <activity
        android:id="@+id/detail_activity"
        android:name="com.ayra.moviecatalogue.ui.view.activity.DetailActivity"
        android:label="Detail"
        tools:layout="@layout/activity_detail" />

    <fragment
        android:id="@+id/favoriteMovieFragment"
        android:name="com.ayra.moviecatalogue.ui.view.fragment.FavoriteMovieFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_favorite_movie" />

    <fragment
        android:id="@+id/favoriteTvShowFragment"
        android:name="com.ayra.moviecatalogue.ui.view.fragment.FavoriteTvShowFragment"
        android:label="@string/series"
        tools:layout="@layout/fragment_favorite_tv_show" />

    <fragment
        android:id="@+id/favorite_menu"
        android:name="com.ayra.moviecatalogue.ui.view.fragment.MyFavoriteFragment"
        android:label="@string/my_favorite"
        tools:layout="@layout/fragment_my_favorite" />

</navigation>